# software-development

./: .env  .gitignore  docker-compose.yml
DB/: schema_datasets.sql
backend/: .env  Dockerfile  create_db.py  inspect_columndb.py  main.py  pyproject.toml  requirements.txt
backend/api/v1/endpoints/: auth.py  datasets.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/models/: dataset.py  user.py
backend/schemas/: dataset.py  user.py
backend/services/: json_sanitize.py  stats.py  types.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ChartBar.jsx  ChartHistogram.jsx  DatasetDetail.jsx  DatasetList.jsx  GroupByExplorer.jsx  GroupByPanel.jsx  Histogram.jsx  UploadCSV.jsx
templating/: index.html
